--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "Fault analysis app",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "dev": "webpack-dev-server --mode development",
+    "custom": "webpack-dev-server --mode development --watch"
   },
   "author": "jtk",
   "license": "ISC",
   "dependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3"
+    "babel-core": "^6.26.3",
+    "react": "^16.5.2",
+    "react-hot-loader": "^4.3.11",
+    "react-router-dom": "^4.3.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.0",
@@ -19,6 +24,8 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "react-dom": "^16.5.2",
     "style-loader": "^0.23.0",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.1",
